# ufocontainer

./: .clang-format  CMakeLists.txt  package.xml
1stparty/: CMakeLists.txt
1stparty/ufomorton/: ufomorton.cmake
cmake/: Container-config.cmake.in  ufocontainerConfig.cmake.in
include/ufo/container/: binary_tree_map.hpp  binary_tree_set.hpp  hextree_map.hpp  hextree_set.hpp  octree_map.hpp  octree_set.hpp  quadtree_map.hpp  quadtree_set.hpp  range.hpp  structure_of_arrays.hpp  tree_map.hpp  tree_set.hpp
include/ufo/container/octree/: code.hpp  key.hpp  octree.hpp  types.hpp
include/ufo/container/structure_of_arrays/: element.hpp
include/ufo/container/tree/: base.hpp  binary_tree.hpp  block.hpp  code.hpp  container.hpp  coord.hpp  data.hpp  file_header.hpp  hextree.hpp  index.hpp  iterator.hpp  key.hpp  map.hpp  map_nearest.hpp  nearest_iterator.hpp  node.hpp  node_nearest.hpp  octree.hpp  predicate.hpp  quadtree.hpp  query_iterator.hpp  query_nearest_iterator.hpp  render.hpp  set.hpp  set_nearest.hpp  set_or_map.hpp  set_or_map_block.hpp  set_or_map_iterator.hpp  set_or_map_nearest.hpp  set_or_map_nearest_iterator.hpp  set_or_map_query_iterator.hpp  set_or_map_query_nearest_iterator.hpp  traversal_technique.hpp  tree.hpp  type.hpp  types.hpp
include/ufo/container/tree/map/: block.hpp  iterator.hpp  nearest_iterator.hpp  query_iterator.hpp  query_nearest_iterator.hpp
include/ufo/container/tree/old/: map.hpp  map_nearest.hpp  set.hpp  set_nearest.hpp  set_or_map.hpp  set_or_map_block.hpp  set_or_map_query_iterator.hpp  set_or_map_query_iterator_helper.hpp  set_or_map_query_nearest_iterator.hpp
include/ufo/container/tree/predicate/: child_of.hpp  depth.hpp  depth_interval.hpp  dynamic.hpp  exists.hpp  filter.hpp  inner.hpp  leaf.hpp  leaf_or_depth.hpp  modified.hpp  offset.hpp  parent.hpp  predicate.hpp  predicate_compare.hpp  pure_leaf.hpp  satisfies.hpp  (+1 more)
tests/: CMakeLists.txt  octree_map_test.cpp  octree_set_test.cpp  octree_test.cpp  quadtree_set_test.cpp  test_tree.hpp  tree_node_test.cpp
(+5 files in other folders)
